# geekbrains_python

./: .gitconfig  .gitignore  README.md  pyproject.toml
FIRST_1/1/: task_1_1.py  task_1_2.py  task_1_3.py
FIRST_1/10/: task_10_1.py  task_10_2.py  task_10_3.py
FIRST_1/11/: task_11_1.py  task_11_2.py  task_11_3.py  task_11_4-6.py  task_11_7.py
FIRST_1/2/: task_2_1.py  task_2_2-3.py  task_2_4.py  task_2_5.py
FIRST_1/3/: task_3_1-2.py  task_3_3-4.py  task_3_5.py
FIRST_1/4/: task_4_2-3.py  task_4_4-5.py  utils.py
FIRST_1/5/: task_5_1-2.py  task_5_3.py  task_5_4.py  task_5_5.py
FIRST_1/6/: hobby.csv  task_6_1-2.py  task_6_3.py  task_6_4.py  task_6_5.py  users.csv
FIRST_1/7/: config.yaml  task_7_1-2.py  task_7_3.py  task_7_4-5.py
FIRST_1/8/: task_8_1-2.py  task_8_3.py  task_8_4.py
FIRST_1/9/: task_9_1.py  task_9_2.py  task_9_3.py  task_9_4.py  task_9_5.py
FIRST_4/1/: lesson_1.py
FIRST_4/2/: lesson_2.py
FIRST_4/3/: lesson_3.py
FIRST_4/4/: lesson_4_1.py  lesson_4_2.py
FIRST_4/5/: lesson_5.py
FIRST_4/6/: lesson_6.py
FIRST_4/7/: lesson_7.py
FIRST_4/8/: lesson_8.py
JS2/4/: lesson_4.html
JS2/Practice/: index.html  package.json  script.js  server.js  style.css  webpack.config.js
SECOND_2/1/: lesson_1.html  lesson_1.js
SECOND_2/2/: lesson_2.html  lesson_2.js
SECOND_2/3/: lesson_3.html  lesson_3.js
SECOND_2/4/: lesson_4.html  lesson_4.js
SECOND_2/5/: lesson_5.html  lesson_5.js
SECOND_2/6/: lesson_6.html  lesson_6.js
SECOND_2/7/: lesson7.css  lesson7.html  lesson7.js
SECOND_2/8/: lesson_8.js
SECOND_3/DRF/: docker-compose.yaml
(+177 files in other folders)
