[tool.poetry]
name = "geekbrains_python"
version = "0.1.0"
description = ""
authors = ["belkanov <78809180+belkanov@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
chardet = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
